--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -13,6 +13,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Doxygen Generate HTML
       uses: mattnotmitt/doxygen-action@v1.3.1
+    - name: Set CNAME manually
+      run: echo api.spic.avans.tk > ./html/CNAME
     - name: Deploy Commit Hash
       uses: peaceiris/actions-gh-pages@v3
       with:
